<resources>
    <string name="app_name">PocketBank</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_register">REGISTER</string>
    <string name="main_slogan">PocketBank-Banking focused on you!</string>
    <string name="main_alredy_account">Already have an account? Sign in!</string>
    <string name="main_new_account">New member? Register Now!</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_gender">Gender</string>
    <string name="register_female">Female</string>
    <string name="register_male">Male</string>
    <string name="register_go_to_login">Go to Login</string>
    <string name="register_IBAN">IBAN</string>
    <string name="invalid_firstName">First name field should not be empty!</string>
    <string name="invalid_lastName">Last name field should not be empty!</string>
    <string name="invalid_email">Email field should not be empty and it must contain @!</string>
    <string name="invalid_password">Password field should not be empty!</string>
    <string name="invalid_password2">Passwords does not match!</string>
    <string name="invalid_iban">IBAN field should not be empty!</string>
    <string name="register_succesful">Your account was succesfully created !</string>
    <string name="title_activity_home"> </string>
    <string name="home">Home</string>
    <string name="home_transactions">Transaction</string>
    <string name="home_history">Transactions history</string>

    <string name="title_activity_contact">Contact </string>
    <string name="current_balance">Current Balance</string>
    <string name="please_complete_the_details_of_the_transaction">Please complete the details of the transaction</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="amount">Amount</string>
    <string name="send_money">Send money</string>
    <string name="error_beneficiar">You have to complete the beneficiary name in order to complete the transaction!</string>
    <string name="error_account">You have to complete the account number in order to complete the transaction!</string>
    <string name="error_amount">You have to complete the amount of money you want to send in order to complete the transaction!</string>
    <string name="error_status">You have to complete the status in order to complete the transaction!</string>
    <string name="money_send">Your money was successfully sent!</string>
    <string name="title_activity_money">Transfer money</string>
    <string name="title_activity_select">My Account</string>
    <string name="title_infos">Infos</string>
    <string name="title_Tranzactions">Transactions</string>
    <string name="title_History">Transactions History</string>
    <string name="title_balance">Current Balance</string>
    <string name="title_activity_current_balance">Current Balance</string>
    <string name="title_activity_history_transactions">Transactions History</string>
    <string name="content_about2">Check your transactions history or your current balance now!</string>
    <string name="content_about">PocketBank - send and receive money instant with this mobile application! </string>
    <string name="button_feedback">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_send">Feedback sent successfully! Thank you!</string>
    <string name="about">About</string>
    <string name="btnJson">Money Received</string>
    <string name="moneyReceived">You have a new income!</string>
    <string name="moneySendHistory">Money send</string>
    <string name="status">Status</string>
    <string name="all_transactions">All Transactions</string>
    <string name="incorrect_user">Invalid username or password!</string>
    <string name="title_activity_received_transaction">Received Money </string>
    <string name="see_received_transactions">See received transactions</string>
    <string name="received_transactions">Received Income</string>
    <string name="transaction_removed">Transaction removed!</string>
    <string name="deletion_canceled">Deletion canceled!</string>
    <string name="delete_dialog_title">Delete transaction!</string>
    <string name="delete_dialog_message">Are you sure you want to delete this transaction?</string>
    <string name="yes_alert_dialog">Yes</string>
    <string name="no_alert_dialog">No</string>
    <string name="delete_account">Delete my account</string>
    <string name="raports">Raports</string>
    <string-array name="spinner_status">
        <item>Send</item>
        <item>Ask</item>
    </string-array>
    <string name="title_activity_raports">Reports</string>
    <string name="raport_amount">All transactions by amount</string>
    <string name="raport_send">Beneficiary name of each transaction sent </string>
    <string name="title_activity_raport_amount">Report for amount sent</string>
    <string name="view_raport">View report</string>
    <string name="save_raport">Save report to txt file</string>
    <string name="raport_saved_successfully">The report was successfully saved!</string>
    <string name="title_activity_raport_send">Report for money sent</string>
    <string name="enough_money">You do not have enough money!</string>
    <string name="refresh">Refresh</string>
    <string name="suggestion_deleted">Suggestion deleted</string>
    <string name="title_activity_chart">Chart</string>
    <string name="transactions_send">Money sent</string>
    <string name="transactions_asked">Money asked</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">View Map</string>
    <string name="view_all_cities_where_you_can_find_pocketbank">View all cities where you can find PocketBank!</string>
    <string name="account_number">Account number</string>
    <string name="cannot_delete_tranzaction">Can not delete this transaction</string>
    <string name="transaction_done_toast">Check transactions list to see the transaction done</string>
    <string name="account_erased">Account erased</string>
    <string name="cannot_delete_user">Can not delete user</string>
</resources>
